[metadata]
name = dpugen
version = 0.0.9
author = Mircea Dan Gheorghe
author_email = mircea-dan.gheorghe@keysight.com
description = Multi-vendor DPU library to generate its configuration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mgheorghe/dpugen
classifiers = 
	Programming Language :: Python
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= dpugen
packages = find:
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*
install_requires = 
	macaddress
	munch
	pyang
	pyangbind
	pytest
	yangson

[options.packages.find]
where = dpugen

[egg_info]
tag_build = 
tag_date = 0

